# gst-ipcam-server

./: README  RELEASE  doxygen.conf  testing_instructions.txt
DemoClient/: README.testing  democlient-backend.c  democlient-backend.h  democlient-callbacks.c  democlient-callbacks.h  democlient-interface.c  democlient-interface.h  democlient-support.c  democlient-support.h  main.c  makefile
DemoClient/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
DemoClientV2/: democlient-callbacks.c  democlient-callbacks.h  democlient-interface.c  democlient-support.c  main.c
DemoClientV2/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
client/: README.testing  demo-client-backend.c~  demo-client-backend.h~  demo-client-callback.c~  demo-client-interface.c~  demo-client-interface.h~  demo-client-support.c~  democlient-backend.c~  democlient-callbacks.c~  democlient-callbacks.h~  democlient-interface.c~  democlient-interface.h~  gst-ipcam-client  gst-ipcam-client-backend.c  gst-ipcam-client-backend.c~  gst-ipcam-client-backend.h  gst-ipcam-client-callbacks.c  gst-ipcam-client-callbacks.c~  gst-ipcam-client-callbacks.h  gst-ipcam-client-interface.c  gst-ipcam-client-interface.c~  gst-ipcam-client-interface.h  gst-ipcam-client-support.c  gst-ipcam-client-support.c~  gst-ipcam-client-support.h  gst-ipcam-client-windowid.c  gst-ipcam-client-windowid.h  main.c  main.c~  makefile  makefile~
client/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
client/nbproject/private/: private.xml
demo-client/: README.testing  demo-client-backend.c  demo-client-backend.h  demo-client-callbacks.c  demo-client-callbacks.h  demo-client-interface.c  demo-client-interface.h  demo-client-support.c  demo-client-support.h  democlient-backend.c  democlient-backend.h  democlient-interface.h  democlient-support.c  democlient-support.h  main.c  makefile
gst-bitrate/: README  autogen.sh
gst-bitrate/src/: Makefile.am  gstbitrate.c  gstbitrate.h
gst-fps/: AUTHORS  COPYING  README  autogen.sh
gst-fps/src/: Makefile.am  gstfpsbin.c  gstfpsbin.h  gstvideofps.c  gstvideofps.h
multi-client/: gis_mc_client.py  gis_mc_clients_manager.py  multiclients_cmd.py
server/: Makefile.am  README  README.testing  configure.ac
server/gst/rtsp-server/: Makefile.am  rtsp-client.c  rtsp-media-factory.c  rtsp-media-factory.h  rtsp-media-mapping.c  rtsp-media.c  rtsp-media.h  rtsp-sdp.c  rtsp-server.c  rtsp-server.h  rtsp-session.c
server/profile/: pipeline-profile-ext.c  pipeline-profile-ext.h  pipeline-profile.c  pipeline-profile.h  sample.prf  server-configuration.c  server-configuration.h
server/servers/: Makefile.am  audio-aac.ini  audio-aac.prf  audio-g711.ini  audio-g711.prf  audio-g726.ini  audio-g726.prf  onesrc-h264-mpeg4.c  onesrc-h264-mpeg4.ini  onesrc-h264.c  onesrc-h264.ini  onesrc-h264.prf  onesrc-jpeg-h264.c  onesrc-jpeg-h264.ini  onesrc-jpeg-mpeg4.c  onesrc-jpeg-mpeg4.ini  onesrc-jpeg.c  onesrc-jpeg.ini  onesrc-jpeg.prf  onesrc-mpeg4.c  onesrc-mpeg4.ini  onesrc-mpeg4.prf  server-profile.c  server-profile.h  server-video.c  twosrc-h264-mpeg4.c  twosrc-jpeg-h264.c  twosrc-jpeg-mpeg4.c
